NATGW.tf
resource "aws_eip" "nat_eip" { 
    tags = { 
        Name = "nat-eip" 
        } 
    }





resource "aws_nat_gateway" "nat_gw" { 
    allocation_id = aws_eip.nat_eip.id 

    subnet_id = aws_subnet.Public_Subnet2.id

    tags = { 

        Name = "nat-gateway" 
        } 
}
